# ai-project-template

./: .env.example  .envrc  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .mcp.json.example  .pre-commit-config.yaml  .reviewer-schema.json  .routing-policy.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: planner.md
.codex/: config.toml  hooks.json
.codex/agents/: planner.toml
.cursor/rules/: tests.mdc  (+3 more)
docs/: blueprint.md  post-fork-checklist.md
scripts/: adapt_thresholds.py  append_event.py  build_pr_context.py  codex_ci.py  dispatch_spec.py  lint_spec.py  queue_specs.py  red_zone_paths.py  route_pr.py  scan_injection.py  telemetry_dashboard.py  try_auto_merge.py  validate_reviewer.py
tests/: test_adapt_thresholds.py  test_agents_skills_sync.py  test_append_event.py  test_build_pr_context.py  test_check_branch_name.py  test_check_no_edits_on_scratch.py  test_ci_workflow_yaml.py  test_codex_ci.py  test_dispatch_spec.py  test_enhancements.py  test_events_schema_dispatch_source.py  test_farewell.py  test_greet.py  test_hook_registration_scratch_guard.py  test_inject_active_spec.py  test_lint_spec.py  test_queue_specs.py  test_red_zone_consistency.py  test_red_zone_paths.py  test_require_just_check.py  test_require_spec_lint.py  test_route_pr.py  test_router_docs.py  test_router_docs_phase4.py  test_router_smoke.py  test_scan_injection.py  test_scheduled_executor_yaml.py  test_smoke.py  test_telemetry_dashboard.py  test_try_auto_merge.py  test_validate_reviewer.py
(+104 files in other folders)
