[project]
name = "your-project-name"
version = "0.1.0"
description = "TODO: one-sentence description of what this project does."
requires-python = ">=3.12"
# Runtime dependencies. Add what your project actually imports; keep this
# list minimal. Common starters for AI projects:
#   "openai>=1.0"
#   "langchain-core>=0.3"
#   "langgraph>=0.3"
#   "python-dotenv>=1.0"
#   "pydantic>=2.0"
dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

# If your project has a CLI entry point, uncomment and edit:
# [project.scripts]
# your-cli-name = "your_package.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/your_package"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests requiring live APIs (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Add per-project config here. Common patterns:
#   [tool.ty.src]
#   exclude = ["src/your_package/templates/**"]   # if you emit generated code
#   [tool.ty.environment]
#   root = ["./src"]
